# Yuan-Agent

./: .env.example  README.md  pyproject.toml
data/event_library/: sungrow_event_library.json
data/fundamentals/: sungrow_baseline.json
data/news/: news_2021.xlsx  news_2022.xlsx  news_2023.xlsx  news_2024.xlsx
data/rules/: rules.json
data/supervision/: 2024光伏逆变器出口量.csv
scripts/: run_fundamental_analyst_reports.py  run_quarterly_2021_2023_training.py  run_quarterly_2024_test.py  run_quarterly_eda_only.py
src/forecasting_system/: __init__.py  config.py  exceptions.py  types.py
src/forecasting_system/agents/: __init__.py  eda.py  fundamental_analyst.py  reasoning.py  student.py  teacher.py
src/forecasting_system/schemas/: __init__.py  event.schema.json  rule.schema.json  rule_update_record.schema.json  student_record.schema.json  teacher_feedback.schema.json
src/forecasting_system/tools/: __init__.py  cycle_state.py  deepseek_client.py  evaluation.py  events.py  financial_model.py  fundamentals.py  global_reasoning_llm.py  logging_tools.py  news.py  reasoning_llm.py  report_analysis.py  rules.py  student_fundamentals.py  student_rule_induction.py
tests/: check_deepseek.py  check_student_fundamentals.py  test_event_extraction.py  test_financial_model.py  test_fundamental_builder.py  test_placeholder_interfaces.py  test_rules_and_logging.py  test_student_fundamentals.py
